--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Instagram</string>
     <string name="email">Email</string>
     <string name="password">Password\n</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
