--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="log_in_with_github">Log in with GitHub</string>
     <string name="github_icon">GitHub Icon</string>
     <string name="or">OR</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_up">Sign up.</string>
+    <string name="log_in">Log in</string>
 </resources>
