--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_up">Sign up.</string>
     <string name="log_in">Log in</string>
+    <string name="instagram_or_facebook">Instagram or Facebook</string>
 </resources>
