added part of logic of navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account">Enter your email and we\'ll send you a link to get back into your account.</string>
     <string name="next">Next</string>
     <string name="back_to_log_in">Back to log in.</string>
+    <string name="instagram_logo">Instagram logo</string>
 </resources>
