--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,12 @@
     <string name="github_icon">GitHub Icon</string>
     <string name="or">OR</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
-    <string name="sign_up">Sign up.</string>
     <string name="log_in">Log in</string>
     <string name="instagram_or_facebook">Instagram or Facebook</string>
     <string name="enter_your_email_and_we_ll_send_you_a_link_to_get_back_into_your_account">Enter your email and we\'ll send you a link to get back into your account.</string>
     <string name="next">Next</string>
     <string name="back_to_log_in">Back to log in.</string>
     <string name="instagram_logo">Instagram logo</string>
+    <string name="trouble_logging_in">Trouble logging in?</string>
+    <string name="sign_up">Sign up</string>
 </resources>
