--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="instagram_logo">Instagram logo</string>
     <string name="trouble_logging_in">Trouble logging in?</string>
     <string name="sign_up">Sign up</string>
+    <string name="full_name">Full name</string>
 </resources>
