--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="trouble_logging_in">Trouble logging in?</string>
     <string name="sign_up">Sign up</string>
     <string name="full_name">Full name</string>
+    <string name="finish">Finish\n</string>
 </resources>
