--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="sign_up">Sign up</string>
     <string name="full_name">Full name</string>
     <string name="finish">Finish\n</string>
+    <string name="web_client_id">893185908089-s31084semslet4cd71461mj3kkmk0vp1.apps.googleusercontent.com</string>
 </resources>
