edited bottom bar and drawer screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="home">Home</string>
     <string name="map">Map</string>
     <string name="profile">Profile</string>
+    <string name="log_out">Log out</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
 </resources>
