--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="log_out">Log out</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="create_new_post">Create new post</string>
 </resources>
