--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="create_new_post">Create new post</string>
+    <string name="select_location">Select Location</string>
 </resources>
