--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="create_new_post">Create new post</string>
-    <string name="select_location">Select Location</string>
+    <string name="select_location">Select location</string>
     <string name="description">Description</string>
     <string name="upload_post">Upload post</string>
 </resources>
