--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="description">Description</string>
     <string name="upload_post">Upload post</string>
     <string name="the_post_was_created_successfully">The post was created successfully!</string>
+
+    <string name="all">All</string>
+    <string name="user">User</string>
+    <string name="location">Location</string>
+    <string name="date_of_post">Date of post</string>
 </resources>
