added some localized strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,52 @@
     <string name="Red">Red</string>
     <string name="Green">Green</string>
     <string name="Blue">Blue</string>
+    <string name="open_drawer">Open Drawer</string>
+    <string name="an_error_occurred">An error occurred</string>
+    <string name="instagram_logo_cd">Instagram Logo</string>
+    <string name="open_camera">Open Camera</string>
+    <string name="direct_messages">Direct Messages</string>
+    <string name="go_back">Go back</string>
+    <string name="selected_preview">Selected preview</string>
+    <string name="edit">Edit</string>
+    <string name="camera">Camera</string>
+    <string name="no_location_selected">No location selected</string>
+    <string name="selected_location">Selected location:</string>
+    <string name="bookmark_icon">Bookmark icon</string>
+    <string name="like_icon">Like icon</string>
+    <string name="comment_icon">Comment icon</string>
+    <string name="direct_message_icon">Direct message icon</string>
+    <string name="post_image">Post image</string>
+    <string name="liked_by">"Liked by "</string>
+    <string name="and">" and "</string>
+    <string name="others">others</string>
+    <string name="search_icon">Search Icon</string>
+    <string name="user_profile_picture">User Profile Picture</string>
+    <string name="logout">Logout</string>
+    <string name="grant_permission">Grant permission</string>
+    <string name="permission_required">Permission required</string>
+    <string name="it_seems_you_permanently_declined_permission_to_access_images_and_videos">"It seems you permanently declined permission to access images and videos. "</string>
+    <string name="you_can_go_to_the_app_settings_to_grant_it">You can go to the app settings to grant it.</string>
+    <string name="this_app_needs_access_to_your_gallery_so_that_you_can_take_choose_pictures_to_upload_while_using_the_app">This app needs access to your gallery so that you can take choose pictures to upload while using the app.</string>
+    <string name="it_seems_you_permanently_declined_camera_permission">"It seems you permanently declined camera permission. "</string>
+    <string name="this_app_needs_access_to_your_camera_so_that_you_can_take_pictures_while_using_the_app">This app needs access to your camera so that you can take pictures while using the app.</string>
+    <string name="it_seems_you_permanently_declined_microphone_permission">"It seems you permanently declined microphone permission. "</string>
+    <string name="this_app_needs_access_to_your_microphone_so_that_your_friends_can_hear_you">This app needs access to your microphone so that your friends can hear you.</string>
+    <string name="it_seems_you_permanently_declined_phone_calling_permission">"It seems you permanently declined phone calling permission. "</string>
+    <string name="this_app_needs_phone_calling_permission_so_that_you_can_talk_to_your_friends">This app needs phone calling permission so that you can talk to your friends.</string>
+    <string name="choose_picture">Choose Picture</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="select_from_gallery">Select from Gallery</string>
+    <string name="cancel">Cancel</string>
+    <string name="back_arrow">Back arrow</string>
+    <string name="current_selection">Current selection:</string>
+    <string name="no_subscription_selected">No subscription selected</string>
+    <string name="instructions_sent_to_your_email">Instructions sent to your email!</string>
+    <string name="request_email">Request email</string>
+    <string name="free">FREE</string>
+    <string name="pro">PRO</string>
+    <string name="gold">GOLD</string>
+    <string name="upload_limit_1gb_day_max_spend_10_photos">Upload limit: 1GB/day. Max spend: 10 photos.</string>
+    <string name="upload_limit_10gb_day_max_spend_50_photos_price_9_99_month">Upload limit: 10GB/day. Max spend: 50 photos. Price: $9.99/month</string>
+    <string name="upload_limit_100gb_day_max_spend_100_photos_price_24_99_month">Upload limit: 100GB/day. Max spend: 100 photos. Price: $24.99/month</string>
 </resources>
