added PostDetails screen to ProfileScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,6 @@
     <string name="upload_limit_100gb_day_max_spend_100_photos_price_24_99_month">Upload limit: 100GB/day. Max spend: 100 photos. Price: $24.99/month</string>
     <string name="verified_icon">Verified Icon</string>
     <string name="user_profile_image">User profile image</string>
+    <string name="show_profile">Show profile</string>
+    <string name="delete">Delete</string>
 </resources>
