--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="photos">" photos ("</string>
     <string name="usage_photos">Daily photo usage:</string>
     <string name="usage_mb">Daily storage usage:</string>
+    <string name="edit_profile">Edit Profile</string>
 </resources>
